saving changes without the tests